Refatoração dos nomes das classes.